melhoria nas cores é iniciando a parte dos projetos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-            <article>
+            <article class="apresentacao">
                 <section class="sec_texto">
                         <h1>Desenvolvedor Front-end</h1>
                         <p>Estudante de programação <br> adquirindo conhecimento para se torna melhor <br> a cada dia que se passa</p>
@@ -36,11 +36,14 @@
                 <section class="sec_imagem">
                     <img id="imagem" src="s-l1200.jpg" alt="">
                 </section>
-            </article>
+            </article >
             <article class="projetos">
-                <section>
-                   <h1>projeto</h1>
-                </section>
+                <br> <br>
+                <h1 id="projetos">projetos</h1>
+                <br>
+                   <section class="container_projetos">
+                       <iframe src="https://abraao-sx35.github.io/projeto-cordel/" frameborder="0"></iframe>
+                   </section>
             </article>
     </main>
 </body>
