--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <menu>
-                <div id="nome">Abraao.sx</div>
+                <div id="nome">abraao.sx</div>
                 <ul>
-                    <a href="#"><li>Inicio</li></a>
-                    <a href="#"><li>Projetos</li></a>
-                    <a href="#"><li>Sobre</li></a>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#Aprojetos">Projetos</a></li>
+                    <li><a href="#">Sobre</a></li>
                 </ul>
                 <button id="contato"><a href="">Contate-me</a></button>
             </menu>
@@ -25,6 +25,8 @@
             <article class="apresentacao">
                 <section class="sec_texto">
                         <h1>Desenvolvedor Front-end</h1>
+                        <br>
+                        <h3>prazer me chamo <b style="color: blue;">abraao</b></h3>
                         <p>Estudante de programação <br> adquirindo conhecimento para se torna melhor <br> a cada dia que se passa</p>
                         <br>
                         <h2>Linguagens</h2>
@@ -37,13 +39,14 @@
                     <img id="imagem" src="s-l1200.jpg" alt="">
                 </section>
             </article >
-            <article class="projetos">
-                <br> <br>
-                <h1 id="projetos">projetos</h1>
-                <br>
-                   <section class="container_projetos">
-                       <iframe src="https://abraao-sx35.github.io/projeto-cordel/" frameborder="0"></iframe>
-                   </section>
+            <article class="projetos" id="Aprojetos">
+                <h1 id="projetosH1">projetos</h1>
+                   <div class="alinhamento">
+                       <section class="container_projetos">
+                           <iframe src="https://abraao-sx35.github.io/projeto-cordel/" frameborder="0"></iframe>
+                           <p id="sobre_projetos">Projeto de um cordel sobre milton duarte</p>
+                       </section>
+                   </div>
             </article>
     </main>
 </body>
